--- a/client/app/perfil/perfil.html
+++ b/client/app/perfil/perfil.html
@@ -1,1 +1,49 @@
-<div>This is the perfil view.</div>
+          <div class="container">
+              <div class="content">
+                <div class="row">
+                  <div class="login-form">
+                    <h1 class="text-center">Perfil</h1>
+                      <form class="form col-md-12 center-block">
+                        <form role="form" >
+                          <div class="col-md-12">
+                            <div class="form-group col-md-12">
+                              <label for="nombre">Nombres </label>
+                              <input type="text" class="form-control" id="nombre" ng-model="vm.usuario.Persona.nombres" required="true"
+                                     placeholder="Nombres" disabled="true">
+                            </div>
+                            <div class="form-group col-md-6">
+                              <label for="apaterno">Ap. Paterno </label>
+                              <input type="text" class="form-control" id="apaterno" ng-model="vm.usuario.Persona.apaterno"
+                                     placeholder="Apellido paterno" disabled="true">
+                            </div>
+                            <div class="form-group col-md-6">
+                              <label for="amaterno">Ap. Materno </label>
+                              <input type="text" class="form-control" id="amaterno" ng-model="vm.usuario.Persona.amaterno"
+                                     placeholder="Apellido materno" disabled="true">
+                            </div>
+                            <div class="form-group col-md-6">
+                              <label for="nombre">Usuario </label>
+                              <input type="text" class="form-control" id="nombre" ng-model="vm.usuario.usuario" required="true"
+                                     placeholder="Usuario" disabled="true">
+                            </div>
+                            <div class="form-group col-md-6">
+                              <label for="amaterno">Rol </label>
+                              <input type="text" class="form-control" id="amaterno" ng-model="vm.usuario.rol" required="true"
+                                     placeholder="Rol" disabled="true">
+                            </div>
+                            <div class="form-group col-md-6">
+                              <label for="genero">Genero </label>
+                              <input type="text" class="form-control" id="genero" ng-model="vm.usuario.Persona.genero" required="true"
+                                     placeholder="Genero" disabled="true">
+                            </div>
+                            <div class="form-group col-md-6">
+                              <label for="fechanac">Fecha Nacimiento </label>
+                              <input type="text" class="form-control" id="fechanac" ng-model="vm.usuario.Persona.fecha_nacimineto"
+                                     placeholder="AA-MM-DD" disabled="true">
+                            </div>
+                          </div>
+                      </form>
+                  </div>
+                </div>
+              </div>
+            </div>
