--- a/client/app/mis-reservas/mis-reservas.html
+++ b/client/app/mis-reservas/mis-reservas.html
@@ -1,1 +1,55 @@
-<div>This is the mis-reservas view.</div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h3 class="page-header">Mis reservas
+      </h3>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Nro.</th>
+            <th>Doctor</th>
+            <th>Especialidad</th>
+            <th>Fecha</th>
+            <th>Nro</th>
+            <th>Hora</th>
+            <th>Estado</th>
+            <th>Consultorio</th>
+            <th>Min/consulta</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="res in vm.reservas">
+            <th>{{$index+1}}</th>
+            <td>{{res.Horario.Medico.Persona.nombres}} {{res.Horario.Medico.Persona.apaterno}} {{res.Horario.Medico.Persona.amaterno}}</td>
+            <td>{{res.Horario.Especialidad.nombre}}</td>
+            <td>{{vm.obtenerDia(res.Horario.fecha)}}</td>
+            <td>{{res.nro}}</td>
+            <td></td>
+            <td>{{res.estado}}</td>
+            <td>{{res.Horario.consultorio}}</td>
+            <td>{{res.Horario.minutos}}</td>
+            <td>
+              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(hor)">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+              </button>
+            </td>
+          </tr>
+         <tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<script type="text/ng-template" id="eliminar-reserva.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Eliminar</h3>
+        </div>
+        <div class="modal-body">
+          <span> ¿Desea eliminar cancelar la reserva?</span>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-success" type="submit" ng-click="vm.eliminar()">SI</button>
+            <button class="btn btn-warning" type="button" ng-click="vm.cancel()">NO</button>
+        </div>
+</script>
