--- a/client/index.html
+++ b/client/index.html
@@ -80,8 +80,9 @@
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
-      <script src="app/mis-reservas/mis-reservas.controller.js"></script>
+      <script src="app/medico/medico.modal.js"></script>
       <script src="app/asegurado/asegurado.js"></script>
+      <script src="app/asegurado/asegurado.modal.js"></script>
       <script src="app/autenticacion/auteticacion.servicio.js"></script>
       <script src="app/autenticacion/usuario.servicio.js"></script>
       <script src="app/emergencia/emergencia.controller.js"></script>
@@ -101,8 +102,8 @@
       <script src="app/main/main.js"></script>
       <script src="app/medico/medico.controller.js"></script>
       <script src="app/medico/medico.js"></script>
-      <script src="app/medico/medico.modal.js"></script>
       <script src="app/asegurado/asegurado.controller.js"></script>
+      <script src="app/mis-reservas/mis-reservas.controller.js"></script>
       <script src="app/mis-reservas/mis-reservas.js"></script>
       <script src="app/observacion/observacion.controller.js"></script>
       <script src="app/observacion/observacion.js"></script>
