--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -3,7 +3,7 @@
               <div class="content">
                 <div class="row">
                   <div class="login-form">
-                    <h1 class="text-center">Citas medicas Cosmil</h1>
+                    <h1 class="text-center">Citas medicas Cossmil</h1>
                               <form class="form col-md-12 center-block">
                                 <div class="form-group">
                                   <input type="text" class="form-control input-lg" ng-model="vm.usuario" placeholder="Usuario">
