--- a/client/index.html
+++ b/client/index.html
@@ -80,7 +80,7 @@
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
-      <script src="app/medico/medico.modal.js"></script>
+      <script src="app/mis-reservas/mis-reservas.controller.js"></script>
       <script src="app/asegurado/asegurado.js"></script>
       <script src="app/asegurado/asegurado.modal.js"></script>
       <script src="app/autenticacion/auteticacion.servicio.js"></script>
@@ -102,8 +102,8 @@
       <script src="app/main/main.js"></script>
       <script src="app/medico/medico.controller.js"></script>
       <script src="app/medico/medico.js"></script>
+      <script src="app/medico/medico.modal.js"></script>
       <script src="app/asegurado/asegurado.controller.js"></script>
-      <script src="app/mis-reservas/mis-reservas.controller.js"></script>
       <script src="app/mis-reservas/mis-reservas.js"></script>
       <script src="app/observacion/observacion.controller.js"></script>
       <script src="app/observacion/observacion.js"></script>
@@ -117,6 +117,8 @@
       <script src="app/reserva/reserva.controller.js"></script>
       <script src="app/reserva/reserva.js"></script>
       <script src="app/reserva/reserva.modal.js"></script>
+      <script src="app/todas-reservas/todas-reservas.controller.js"></script>
+      <script src="app/todas-reservas/todas-reservas.js"></script>
       <script src="app/usuario/usuario.controller.js"></script>
       <script src="app/usuario/usuario.js"></script>
       <script src="app/usuario/usuario.modal.js"></script>
