--- a/client/app/reserva/reserva.html
+++ b/client/app/reserva/reserva.html
@@ -11,7 +11,7 @@
       <div class="col-md-3">
       </div>
       <div class="form-group col-md-6">
-        <button type="button" class="btn btn-info" ng-click="vm.login()">Login</button>
+        <button type="button" class="btn btn-info" ng-click="vm.login()">Buscar</button>
         {{vm.asegurado.Persona.nombres}} {{vm.asegurado.Persona.apaterno}} {{vm.asegurado.Persona.amaterno}}
       </div>
       <div class="col-md-3">
