--- a/client/app/horario/horario.html
+++ b/client/app/horario/horario.html
@@ -62,37 +62,19 @@
                     <div class="col-md-12">
                         <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
                             <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
-                              {{ vm.medico.Persona.nombres || 'Seleccione un medico' }} {{ vm.medico.Persona.apaterno || '' }} {{ vm.medico.Persona.amaterno || '' }}
+                              {{ vm.medico.Persona.nombres || 'Seleccione un medico' }} {{ vm.medico.Persona.apaterno || '' }} {{ vm.medico.Persona.amaterno || '' }} - {{vm.medico.Especialidad.nombre || ''}}
                               <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                               <li role="menuitem" ng-repeat="med in vm.medicos">
-                                  <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.Persona.nombres }} {{med.Persona.apaterno}} {{med.Persona.amaterno}}</a>
+                                  <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.Persona.nombres }} {{med.Persona.apaterno}} {{med.Persona.amaterno}} - {{med.Especialidad.nombre}}</a>
                               </li>
                             </ul>
                         </div>
                       </div>
                       <br/>
                       <br/>
-                      <div class="col-md-12">
-                            <div class="btn-group control-group" uib-dropdown is-open="statusa.isopen">
-                                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
-                                  {{ vm.especialidad.nombre || 'Seleccione una especialidad' }}
-                                  <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                                  <li role="menuitem" ng-repeat="esp in vm.especialidades">
-                                      <a href="" ng-click="vm.seleccionarEspecialidad(esp)">{{ esp.nombre }}</a>
-                                  </li>
-                                </ul>
-                            </div>
-                      </div>
                     <div class="col-md-12">
-                          <div class="form-group col-md-4">
-                            <label for="nombre">Nro. Fichas </label>
-                            <input type="text" class="form-control" id="nombre" ng-model="vm.horario.fichas"
-                                   placeholder="Fichas habiles">
-                          </div>
                           <div class="form-group col-md-4">
                             <label for="nombre">Minutos </label>
                             <input type="text" class="form-control" id="nombre" ng-model="vm.horario.minutos"
@@ -115,9 +97,12 @@
                           </div>
                     </div>
                     <div class="col-md-12">
+                        <multiple-date-picker ng-model="vm.diasSeleccionados" day-click="oneDaySelectionOnly"></multiple-date-picker>
+                    </div>
+                    <!--div class="col-md-12">
                       <label for="nombre">Fecha </label>
                       <uib-datepicker ng-model="vm.horario.fecha" ></uib-datepicker>
-                    </div>
+                    </div-->
                   </form>
                 </div>
               </div>
