--- a/client/app/medico/medico.html
+++ b/client/app/medico/medico.html
@@ -29,7 +29,7 @@
             <td>{{med.Persona.apaterno}}</td>
             <td>{{med.Persona.amaterno}}</td>
             <td>{{med.Persona.genero}}</td>
-            <td>{{med.Persona.fecha_nacimineto}}</td>
+            <td>{{vm.obtenerDia(med.Persona.fecha_nacimineto)}}</td>
             <td>
               <button  type="button" class="btn btn-info">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
