--- a/client/app/usuario/usuario.html
+++ b/client/app/usuario/usuario.html
@@ -30,7 +30,7 @@
             <td>{{us.Persona.apaterno}}</td>
             <td>{{us.Persona.amaterno}}</td>
             <td>{{us.Persona.genero}}</td>
-            <td>{{us.Persona.fecha_nacimineto}}</td>
+            <td>{{vm.obtenerDia(us.Persona.fecha_nacimineto)}}</td>
             <td>
               <button  type="button" class="btn btn-info">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
@@ -163,8 +163,14 @@
                       </div>
                       <div class="form-group col-md-6">
                         <label for="fechanac">Fecha Nacimiento </label>
-                        <input type="text" class="form-control" id="fechanac" ng-model="vm.persona.fecha_nacimineto"
-                               placeholder="AA-MM-DD">
+                        <!--input type="text" class="form-control" id="fechanac" ng-model="vm.persona.fecha_nacimineto"
+                               placeholder="AA-MM-DD"-->
+                               <p class="input-group">
+                                 <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="vm.persona.fecha_nacimineto" is-open="vm.opened" datepicker-options="vm.dateOptions" ng-required="true" close-text="Close"/>
+                                 <span class="input-group-btn">
+                                   <button type="button" class="btn btn-default" ng-click="vm.abrirPopup()"><i class="glyphicon glyphicon-calendar"></i></button>
+                                 </span>
+                               </p>
                       </div>
                     </div>
                   </form>
