--- a/client/app/emergencia/emergencia.html
+++ b/client/app/emergencia/emergencia.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-12">
       <h3 class="page-header">Emergencias
-        <button  type="button" class="btn btn-info" ng-click="vm.abrir()">
+        <button  type="button" class="btn btn-info" ng-click="vm.abrir()" ng-show="vm.esAdmin">
           <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Nuevo
         </button>
       </h3>
@@ -22,10 +22,10 @@
             <td>{{vm.obtenerDia(em.fecha)}}</td>
             <td>{{em.Medico.Persona.nombres}} {{em.Medico.Persona.apaterno}} {{em.Medico.Persona.amaterno}}</td>
             <td>
-              <button  type="button" class="btn btn-info">
+              <button  type="button" class="btn btn-info" ng-show="vm.esAdmin">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
               </button>
-              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(em)">
+              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(em)" ng-show="vm.esAdmin">
                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
               </button>
             </td>
