--- a/client/app/observacion/observacion.html
+++ b/client/app/observacion/observacion.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h3 class="page-header">Observaciones
-        <button  type="button" class="btn btn-info" ng-click="vm.abrir()">
+      <h3 class="page-header">Informaciones
+        <button  type="button" class="btn btn-info" ng-click="vm.abrir()" ng-show="vm.esAdmin">
           <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Nuevo
         </button>
       </h3>
@@ -26,10 +26,10 @@
             <td>{{vm.obtenerDia(obs.fecha_inicio)}}</td>
             <td>{{vm.obtenerDia(obs.fecha_fin)}}</td>
             <td>
-              <button  type="button" class="btn btn-info">
+              <button  type="button" class="btn btn-info" ng-show="vm.esAdmin">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
               </button>
-              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(obs)">
+              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(obs)" ng-show="vm.esAdmin">
                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
               </button>
             </td>
