--- a/client/app/usuario/usuario.html
+++ b/client/app/usuario/usuario.html
@@ -151,20 +151,25 @@
                       </div>
                       <div class="form-group col-md-4">
                         <label for="amaterno">Rol </label>
-                        <input type="text" class="form-control" id="amaterno" ng-model="vm.usuario.rol" required="true"
-                               placeholder="Rol">
+                               <select class="form-control" ng-model="vm.usuario.rol">
+                                 <option value="ASEGURADO" selected="selected">ASEGURADO</option>
+                                 <option value="BIOESTADISTICO">BIOESTADISTICO</option>
+                                 <option value="RECEPCIONISTA">RECEPCIONISTA</option>
+                                 <option value="ADMIN">ADMIN</option>
+                               </select>
                       </div>
                     </div>
                     <div class="col-md-12">
                       <div class="form-group col-md-6">
                         <label for="genero">Genero </label>
-                        <input type="text" class="form-control" id="genero" ng-model="vm.persona.genero" required="true"
-                               placeholder="Genero">
+                               <select class="form-control" ng-model="vm.persona.genero" value="MASCULINO">
+                                 <option value="MASCULINO" selected="selected">MASCULINO</option>
+                                 <option value="FEMENINO">FEMENINO</option>
+                               </select>
+
                       </div>
                       <div class="form-group col-md-6">
                         <label for="fechanac">Fecha Nacimiento </label>
-                        <!--input type="text" class="form-control" id="fechanac" ng-model="vm.persona.fecha_nacimineto"
-                               placeholder="AA-MM-DD"-->
                                <p class="input-group">
                                  <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="vm.persona.fecha_nacimineto" is-open="vm.opened" datepicker-options="vm.dateOptions" ng-required="true" close-text="Close"/>
                                  <span class="input-group-btn">
