--- a/client/app/emergencia/emergencia.html
+++ b/client/app/emergencia/emergencia.html
@@ -6,7 +6,11 @@
           <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Nuevo
         </button>
       </h3>
-
+      <div class="form-group col-md-12">
+        <label for="matricula">Buscar:</label>
+        <input type="text" class="form-control" id="matricula" ng-model="vm.busqueda"
+           placeholder="Asegurado">
+      </div>
       <table class="table">
         <thead>
           <tr>
@@ -17,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat="em in vm.emergencias">
+          <tr ng-repeat="em in vm.emergencias|filter: vm.busqueda">
             <th>{{$index+1}}</th>
             <td>{{vm.obtenerDia(em.fecha)}}</td>
             <td>{{em.Medico.Persona.nombres}} {{em.Medico.Persona.apaterno}} {{em.Medico.Persona.amaterno}}</td>
