--- a/client/app/usuario/usuario.html
+++ b/client/app/usuario/usuario.html
@@ -6,6 +6,11 @@
           <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Nuevo
         </button>
       </h3>
+      <div class="form-group col-md-12">
+        <label for="matricula">Buscar:</label>
+        <input type="text" class="form-control" id="matricula" ng-model="vm.busqueda"
+           placeholder="Asegurado">
+      </div>
       <table class="table">
         <thead>
           <tr>
@@ -21,7 +26,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat="us in vm.usuarios">
+          <tr ng-repeat="us in vm.usuarios|filter: vm.busqueda">
             <th>{{$index+1}}</th>
             <td>{{us.usuario}}</td>
             <td>{{us.rol}}</td>
