--- a/client/app/reserva/reserva.html
+++ b/client/app/reserva/reserva.html
@@ -27,9 +27,10 @@
     <div class="col-md-2">
     </div>
     <div class="col-md-8">
+
 <uib-accordion close-others="oneAtATime">
     <uib-accordion-group ng-repeat="e in vm.especialidades" heading="{{e.nombre}}" is-open="statusEsp" is-disabled="isFirstDisabled">
-      <uib-accordion close-others="oneAtATime">
+      <!--uib-accordion close-others="oneAtATime">
         <uib-accordion-group ng-repeat="m in e.Medicos" heading="{{m.Persona.nombres}} {{m.Persona.apaterno}} {{m.Persona.amaterno}}" is-open="statusMed" is-disabled="isFirstDisabled">
           <ul>
             <li ng-repeat="h in m.Horarios">
@@ -59,7 +60,7 @@
             </li>
           </ul>
         </uib-accordion-group>
-      </uib-accordion>
+      </uib-accordion-->
     </uib-accordion-group>
   </uib-accordion>
 </div>
