--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -2,9 +2,11 @@
           <div class="container">
               <div class="content">
                 <div class="row">
-                  <div class="login-form">
+                  <!--div class="login-form"-->
                     <h1 class="text-center">Citas medicas Cossmil</h1>
-                              <form class="form col-md-12 center-block">
+                      <div class="col-md-3">
+                      </div>
+                              <form class="form col-md-6 center-block">
                                 <div class="form-group">
                                   <input type="text" class="form-control input-lg" ng-model="vm.usuario" placeholder="Usuario">
                                 </div>
@@ -21,7 +23,9 @@
                                   <span class="pull-right"><a href="#">Olvide mi contraseña</a></span>
                                 </div>
                               </form>
-                  </div>
+                              <div class="col-md-3">
+                              </div>
+                  <!--/div-->
                 </div>
               </div>
             </div>
