--- a/client/app/reserva/reserva.html
+++ b/client/app/reserva/reserva.html
@@ -46,7 +46,15 @@
     <div ng-show="vm.verHorarios">
       <h3 class="page-header">Horarios</h3>
       <div ng-repeat="h in vm.horarios">
-          <a class="btn btn-info btn-lg-a" href="#" role="button" ng-click="vm.mostrarFichas(h)">{{vm.obtenerDia(h.fecha)}}</a></p>
+        <a class="btn btn-danger btn-lg-a" ng-show="h.estado =='EMERGENCIA'" href="#" role="button">
+          {{vm.obtenerDia(h.fecha)}} - En emergencias
+        </a></p>
+        <a class="btn btn-danger btn-lg-a" ng-show="h.estado =='PERMISO'" href="#" role="button">
+          {{vm.obtenerDia(h.fecha)}} - Con permiso
+        </a></p>
+        <a class="btn btn-info btn-lg-a" ng-show="h.estado =='DISPONIBLE'" href="#" role="button" ng-click="vm.mostrarFichas(h)">
+          {{vm.obtenerDia(h.fecha)}}
+        </a></p>
         <br>
       </div>
       <a href="#" class="btn btn-danger" role="button" ng-click="vm.volverMedicos()"><< Volver</a>
@@ -83,40 +91,6 @@
       </a></p>
       <a href="#" class="btn btn-danger" role="button" ng-click="vm.volverFichas()"><< Volver</a>
     </div>
-<!--uib-accordion close-others="oneAtATime">
-    <uib-accordion-group ng-repeat="e in vm.especialidades" heading="{{e.nombre}}" is-open="statusEsp" is-disabled="isFirstDisabled">
-      <uib-accordion close-others="oneAtATime">
-        <uib-accordion-group ng-repeat="m in e.Medicos" heading="{{m.Persona.nombres}} {{m.Persona.apaterno}} {{m.Persona.amaterno}}" is-open="statusMed" is-disabled="isFirstDisabled">
-          <ul>
-            <li ng-repeat="h in m.Horarios">
-              {{vm.obtenerDia(h.fecha)}}
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Nro.</th>
-                    <th>Hora</th>
-                    <th>Estado</th>
-                    <th>Acciones</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr ng-repeat="n in h.Reservas">
-                    <th>{{n.nro}}</th>
-                    <td>{{vm.obtenerHora(h.hora_inicio,n.nro,h.minutos)}}</td>
-                    <td>{{n.estado}}</td>
-                    <td ng-show="n.estado =='OCUPADO'"></td>
-                    <td>
-                      <button ng-show="n.estado == 'DISPONIBLE'" type="button" class="btn btn-info" ng-click="vm.open(n.nro,h)">Reservar</button>
-                    </td>
-                  </tr>
-                 <tbody>
-              </table>
-            </li>
-          </ul>
-        </uib-accordion-group>
-      </uib-accordion>
-    </uib-accordion-group>
-  </uib-accordion-->
 </div>
 <div class="col-md-2">
 </div>
