--- a/client/app/especialidad/especialidad.html
+++ b/client/app/especialidad/especialidad.html
@@ -5,6 +5,9 @@
         <button  type="button" class="btn btn-info" ng-click="vm.abrir()">
           <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Nuevo
         </button>
+        <button  type="button" class="btn btn-succes" ng-click="vm.listar()">
+          <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Actualizar
+        </button>
       </h3>
       <div class="form-group col-md-12">
         <label for="matricula">Buscar:</label>
