--- a/client/app/mis-reservas/mis-reservas.html
+++ b/client/app/mis-reservas/mis-reservas.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container view">
   <div class="row">
     <div class="col-lg-12">
       <h3 class="page-header">Mis reservas
