--- a/client/app/todas-reservas/todas-reservas.html
+++ b/client/app/todas-reservas/todas-reservas.html
@@ -18,7 +18,7 @@
         <div class="col-md-4">
         </div>
       </div>
-      <table class="table" ng-repeat="h in vm.horarios">
+      <table class="table" ng-repeat="h in vm.horarios" ng-if="h.Reservas.length>0">
         <caption>
           <div class="well well-lg-a">
             <div class="form-group col-md-12">
